// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryBoxes should render correctly for wired and wireless 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c3 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-red-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-yellow-40);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-neutrals-30);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c11 {
  color: var(--acx-primary-black);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c6 .ant-statistic-title {
  color: var(--acx-primary-white);
  font-size: var(--acx-body-4-font-size);
  min-height: 24px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c6 .ant-statistic-content {
  color: var(--acx-primary-white);
}

.c6 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c6 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c12 .ant-statistic-title {
  color: var(--acx-primary-black);
  font-size: var(--acx-body-4-font-size);
  min-height: 24px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c12 .ant-statistic-content {
  color: var(--acx-primary-black);
}

.c12 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c12 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

.c7 {
  background-color: var(--acx-primary-white);
  height: 95%;
}

.c13 {
  background-color: var(--acx-primary-black);
  height: 95%;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="ant-row "
      style="margin: -10px -10px -10px -10px;"
    >
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              Utilization
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Avg. clients per AP
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      643
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c7"
                role="separator"
              />
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Switch ports in use
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      636
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /14.2K
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c8"
          >
            <div
              class="c4"
            >
              Incidents
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wireless
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      461
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c7"
                role="separator"
              />
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wired
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      8
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c9"
          >
            <div
              class="c4"
            >
              Total Traffic
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wireless
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1
                    </span>
                    <span
                      class="ant-statistic-content-value-decimal"
                    >
                      .11
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    GB
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c7"
                role="separator"
              />
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wired
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      123
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    GB
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Power Utilization (PoE)
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c12"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Insufficient powered APs
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /8
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c13"
                role="separator"
              />
              <div
                class="ant-statistic c12"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Switches with surplus availability
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      2
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryBoxes should render correctly for wireless only view 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c3 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-red-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-yellow-40);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-neutrals-30);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c10 {
  color: var(--acx-primary-black);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c6 .ant-statistic-title {
  color: var(--acx-primary-white);
  font-size: var(--acx-body-4-font-size);
  min-height: 0px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c6 .ant-statistic-content {
  color: var(--acx-primary-white);
}

.c6 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c6 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c11 .ant-statistic-title {
  color: var(--acx-primary-black);
  font-size: var(--acx-body-4-font-size);
  min-height: 0px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c11 .ant-statistic-content {
  color: var(--acx-primary-black);
}

.c11 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c11 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="ant-row "
      style="margin: -10px -10px -10px -10px;"
    >
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              Utilization
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 100%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Avg. clients per AP
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      643
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c7"
          >
            <div
              class="c4"
            >
              Incidents
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 100%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wireless
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      461
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c8"
          >
            <div
              class="c4"
            >
              Total Traffic
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 100%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wireless
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1
                    </span>
                    <span
                      class="ant-statistic-content-value-decimal"
                    >
                      .11
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    GB
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              Power Utilization (PoE)
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c11"
                style="width: 100%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Insufficient powered APs
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      1
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /8
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SummaryBoxes should show - when no data 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.c3 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-red-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-yellow-40);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-neutrals-30);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c11 {
  color: var(--acx-primary-black);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c6 .ant-statistic-title {
  color: var(--acx-primary-white);
  font-size: var(--acx-body-4-font-size);
  min-height: 24px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c6 .ant-statistic-content {
  color: var(--acx-primary-white);
}

.c6 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c6 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c12 .ant-statistic-title {
  color: var(--acx-primary-black);
  font-size: var(--acx-body-4-font-size);
  min-height: 24px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c12 .ant-statistic-content {
  color: var(--acx-primary-black);
}

.c12 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c12 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

.c7 {
  background-color: var(--acx-primary-white);
  height: 95%;
}

.c13 {
  background-color: var(--acx-primary-black);
  height: 95%;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="ant-row "
      style="margin: -10px -10px -10px -10px;"
    >
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <div
              class="c4"
            >
              Utilization
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Avg. clients per AP
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      0
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c7"
                role="separator"
              />
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Switch ports in use
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      0
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /0
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c8"
          >
            <div
              class="c4"
            >
              Incidents
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wireless
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      0
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c7"
                role="separator"
              />
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wired
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      0
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c9"
          >
            <div
              class="c4"
            >
              Total Traffic
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wireless
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c7"
                role="separator"
              />
              <div
                class="ant-statistic c6"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Wired
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    --
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-col ant-col-6 c1"
        style="padding: 10px 10px 10px 10px;"
      >
        <div
          class="c2"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              Power Utilization (PoE)
            </div>
            <div
              class="c5"
            >
              <div
                class="ant-statistic c12"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Insufficient powered APs
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      0
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /0
                  </span>
                </div>
              </div>
              <div
                class="ant-divider ant-divider-vertical c13"
                role="separator"
              />
              <div
                class="ant-statistic c12"
                style="width: 50%;"
              >
                <div
                  class="ant-statistic-title"
                >
                  Switches with surplus availability
                </div>
                <div
                  class="ant-statistic-content"
                >
                  <span
                    class="ant-statistic-content-value"
                  >
                    <span
                      class="ant-statistic-content-value-int"
                    >
                      0
                    </span>
                  </span>
                  <span
                    class="ant-statistic-content-suffix"
                  >
                    /0
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
